--- a/project/res/values/colors.xml
+++ b/project/res/values/colors.xml
@@ -187,4 +187,7 @@
     <color name="tablet_checkout_light">#E5E6E5</color>
     <color name="tablet_checkout_dark">#464D51</color>
 
+    <!-- Tablet Confirmation Action Buttons -->
+    <color name="tablet_confirmation_actionbutton_pressed">#20000000</color>
+
 </resources>
