--- a/project/res/values/styles.xml
+++ b/project/res/values/styles.xml
@@ -737,6 +737,7 @@
         <item name="android:textColor">#2970CC</item>
         <item name="android:textSize">15sp</item>
         <item name="android:drawablePadding">10dp</item>
+        <item name="android:background">@drawable/bg_tablet_confirmation_actionbutton</item>
     </style>
 
     <style name="Confirmation" />
