--- a/project/res/layout/fragment_tablet_hotel_confirmation.xml
+++ b/project/res/layout/fragment_tablet_hotel_confirmation.xml
@@ -49,11 +49,11 @@
                     android:orientation="vertical" >
 
                     <com.expedia.bookings.widget.TextView
+                        android:id="@+id/confirmation_title_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:ellipsize="middle"
                         android:singleLine="true"
-                        android:text="@string/tablet_confirmation_hotel_booked"
                         android:textColor="#333333"
                         android:textSize="26sp"
                         app:textStyle="condensed_light" />
