Add dev preference for forcing the GOOGLE_WALLET error
The checkout response will always have the Google Wallet
is unavailable error. It will always be the first error
in the list, so the error dialog will always be about
Google Wallet not being available.

--- a/project/res/xml/preferences_dev.xml
+++ b/project/res/xml/preferences_dev.xml
@@ -40,6 +40,12 @@
             android:summary="If you think the internal FS.db is out of date"
             android:title="Force FlightStats DB Update" />
 
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:key="@string/preference_force_google_wallet_error"
+            android:summary="Force the GOOGLE_WALLET error to be added to the checkout response. Will be the primary error, no matter what."
+            android:title="Force Google Wallet error" />
+
     </PreferenceCategory>
 
     <PreferenceCategory android:title="Hotels" >
