--- a/project/res/values/donottranslate.xml
+++ b/project/res/values/donottranslate.xml
@@ -91,6 +91,7 @@
     <string name="preference_push_notification_gcm_id">preference_push_notification_gcm_id</string>
     <string name="preference_disable_domain_v2_hotel_search">preference_disable_domain_v2_hotel_search</string>
     <string name="preference_fake_invalid_google_wallet_line_item">preference_fake_invalid_google_wallet_line_item</string>
+    <string name="preference_force_google_wallet_error">preference_force_google_wallet_error</string>
 
     <!-- Setting keys -->
     <string name="setting_hide_hotel_attach">setting_hide_hotel_attach</string>
