--- a/project/res/layout/section_edit_creditcard.xml
+++ b/project/res/layout/section_edit_creditcard.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.expedia.bookings.section.SectionBillingInfo xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -20,7 +21,7 @@
             android:layout_weight="0"
             android:src="@drawable/ic_generic_card" />
 
-        <EditText
+        <com.expedia.bookings.widget.NumberMaskEditText
             android:id="@+id/edit_creditcard_number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -29,10 +30,9 @@
             android:focusableInTouchMode="true"
             android:hint="@string/credit_card_hint"
             android:imeOptions="flagNoExtractUi"
-            android:inputType="number"
-            android:maxLength="@integer/max_credit_card_length"
             android:paddingBottom="12dp"
-            android:singleLine="true" />
+            android:singleLine="true"
+            app:numberFormat="creditcard" />
     </LinearLayout>
 
     <TextView
