2594. CVV refresh on phone (Part2) Changes include layout dimens, repositing of texts. That remains is the masking/translucent blur on the card other than the CVV text view. This will follow in the next commit.

--- a/project/res/layout/fragment_cvv_entry.xml
+++ b/project/res/layout/fragment_cvv_entry.xml
@@ -13,50 +13,20 @@
         android:layout_centerInParent="true"
         android:visibility="invisible" />
 
-    <!-- "Security Code for Doug's VISA" prompt -->
-
-    <com.mobiata.android.widget.AutoResizeTextView
-        android:id="@+id/cvv_prompt_text_view"
-        style="@style/Widget.TextView.CVVPrompt"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:singleLine="true"
-        android:ellipsize="end"
-        android:gravity="center_horizontal" />
-
-    <!-- "See back of card" prompt -->
-
-    <com.expedia.bookings.widget.TextView
-        android:id="@+id/cvv_subprompt_text_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@id/cvv_prompt_text_view"
-        android:textSize="18sp"
-        android:gravity="center_horizontal"
-        android:text="@string/See_back_of_card"
-        android:textColor="@android:color/white"
-        app:textStyle="light" />
-
-
     <!-- Credit card at top of screen (or to the left on tablet) -->
 
     <FrameLayout
         android:id="@+id/credit_card_section_holder"
         style="@style/CvvScreenCreditCard"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_width="318dp"
+        android:layout_height="219dp">
 
         <!-- Credit card with logo and signature -->
 
         <include
             android:id="@+id/credit_card_section"
-            android:layout_width="302dp"
-            android:layout_height="190dp"
+            android:layout_width="318dp"
+            android:layout_height="219dp"
             android:layout_gravity="center_vertical|right"
             layout="@layout/section_credit_card" />
 
@@ -67,12 +37,11 @@
             android:layout_width="84dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|right"
-            android:layout_marginRight="10dp"
+            android:layout_marginRight="82dp"
             android:background="@drawable/div_cvv"
             android:freezesText="true"
             android:gravity="center_horizontal"
             android:maxLength="4"
-            android:paddingTop="14dp"
             android:textColor="@color/cvv_normal"
             android:textSize="20dp" />
 
