--- a/project/res/values/styles.xml
+++ b/project/res/values/styles.xml
@@ -112,13 +112,13 @@
         <item name="android:ellipsize">end</item>
         <item name="android:layout_marginTop">4dp</item>
         <item name="android:layout_marginLeft">4dp</item>
-        <item name="android:layout_marginRight">4dp</item>
+        <item name="android:layout_marginRight">20dp</item>
         <item name="android:shadowColor">#2D000000</item>
         <item name="android:shadowDx">0</item>
         <item name="android:shadowDy">1</item>
         <item name="android:shadowRadius">.1</item>
         <item name="android:textColor">@android:color/white</item>
-        <item name="android:textSize">20sp</item>
+        <item name="android:textSize">14sp</item>
     </style>
 
     <style name="Widget.TextView.CVVPrompt" parent="Widget.TextView.CVVPromptBase" />
@@ -972,9 +972,8 @@
 
     <style name="CvvScreenCreditCard">
         <item name="android:layout_above">@id/center</item>
-        <item name="android:layout_below">@id/cvv_subprompt_text_view</item>
-        <item name="android:layout_alignRight">@id/center</item>
-        <item name="android:layout_marginRight">-50dp</item>
+        <item name="android:layout_alignParentRight">true</item>
+        <item name="android:layout_marginRight">55dp</item>
         <item name="android:layoutAnimation">@anim/layout_slide_in_left</item>
     </style>
 
@@ -991,8 +990,7 @@
         <item name="android:layout_alignBottom">@+id/credit_card_signature_bg_view</item>
         <item name="android:layout_alignRight">@+id/credit_card_signature_bg_view</item>
         <item name="android:layout_alignTop">@+id/credit_card_signature_bg_view</item>
-        <item name="android:layout_marginLeft">-32dp</item>
-        <item name="android:layout_marginRight">132dp</item>
+        <item name="android:layout_marginRight">90dp</item>
         <item name="android:layout_marginTop">2dp</item>
         <item name="android:ellipsize">start</item>
         <item name="android:gravity">center_vertical|right</item>
