457: Tablet Hotel Image Gallery theming
Summary:
- Making actionbar translucent
- changing selected photo border image
- Adding bg_gallery_photo_selected_tvly
- Defining var in color for actionbar bgColor

Reviewers: brennan

Reviewed By: brennan

CC: sugupta

Differential Revision: https://phabricator.mobiata.com/D225

--- a/project/res/values/themes.xml
+++ b/project/res/values/themes.xml
@@ -253,6 +253,7 @@
         <item name="savePaymentToAccountString">@string/save_billing_info_message</item>
         <item name="saveTravelerToAccountString">@string/save_traveler_message_TEMPLATE</item>
         <item name="bgFindItineraryButton">@drawable/btn_find</item>
+        <item name="tabletHotelImageGalleryPhotoBorder">@drawable/bg_gallery_photo</item>
     </style>
 
     <!-- Inherit EB or VSC theme based on desired project -->
