--- a/project/res/layout-large-v12/gallery_item.xml
+++ b/project/res/layout-large-v12/gallery_item.xml
@@ -5,7 +5,7 @@
         android:id="@+id/image"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:background="@drawable/bg_gallery_photo"
+        android:background="?attr/tabletHotelImageGalleryPhotoBorder"
         android:cropToPadding="true"
         android:scaleType="centerCrop" />
 
