--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -337,4 +337,7 @@
 
     <attr name="hotelTabletStarRatingStyle" format="reference"/>
 
+    <!--Tablet Hotel ImageGallery border for selected & non-selected  photo-->
+    <attr name="tabletHotelImageGalleryPhotoBorder" format="reference"/>
+
 </resources>
