--- a/project/res/layout/section_flight_tablet_edit_traveler.xml
+++ b/project/res/layout/section_flight_tablet_edit_traveler.xml
@@ -9,10 +9,10 @@
     android:paddingRight="2dp">
 
     <ImageView
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginRight="8dp"
-        android:src="@drawable/ic_traveler"/>
+        android:src="@drawable/ic_tablet_checkout_generic_traveler"/>
 
     <LinearLayout
         android:orientation="vertical"
