--- a/project/res/layout/fragment_dialog_expiration.xml
+++ b/project/res/layout/fragment_dialog_expiration.xml
@@ -51,7 +51,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@drawable/bg_signin_dialog_button"
-            android:text="@android:string/cancel"
+            android:text="@string/cancel"
             android:textSize="14sp" />
 
         <View
