--- a/project/res/layout/fragment_itin_card.xml
+++ b/project/res/layout/fragment_itin_card.xml
@@ -22,6 +22,7 @@
             android:layout_weight="1" />
 
         <FrameLayout
+            android:id="@+id/fragment_title_menu_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="0dp" >
