--- a/project/res/layout/widget_itin_card.xml
+++ b/project/res/layout/widget_itin_card.xml
@@ -62,6 +62,7 @@
                     android:layout_weight="1" />
 
                 <FrameLayout
+                    android:id="@+id/title_menu_layout"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="0dp" >
