Removing expedia branded placeholder from hotels confirmation screen
Reviewers: brad

Reviewed By: brad

Differential Revision: https://phabricator.mobiata.com/D242

(cherry picked from commit efc1174e25535c537e04edc5de41ebe1e0f5f769)

Conflicts:
	project/res/values/attrs.xml
	project/res/values/themes.xml
	project/res_travelocity/values/themes.xml

--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -469,4 +469,6 @@
     <attr name="itinTabletCardPopupBackgroundDrawable" format="reference"/>
     <attr name="itinTabletCardPopupHeaderDrawable" format="reference"/>
 
+    <attr name="hotelConfirmationPlaceholderDrawable" format="reference" />
+
 </resources>
