--- a/project/res/values/themes.xml
+++ b/project/res/values/themes.xml
@@ -152,6 +152,7 @@
         <item name="loginWithExpediaContentDescription">@string/cd_checkout_log_in_with_expedia</item>
         <item name="cvvEntryTitleText">@string/security_code_TEMPLATE</item>
         <item name="bgFindItineraryButton">@drawable/btn_find</item>
+        <item name="hotelConfirmationPlaceholderDrawable">@drawable/bg_itin_placeholder</item>
     </style>
 
     <!-- Inherit EB or VSC theme based on desired project -->
