Removing expedia branded placeholder from hotels confirmation screen
Reviewers: brad

Reviewed By: brad

Differential Revision: https://phabricator.mobiata.com/D242

--- a/project/res/values/attrs.xml
+++ b/project/res/values/attrs.xml
@@ -340,4 +340,6 @@
     <!--Tablet Hotel ImageGallery border for selected & non-selected  photo-->
     <attr name="tabletHotelImageGalleryPhotoBorder" format="reference"/>
 
+    <attr name="hotelConfirmationPlaceholderDrawable" format="reference" />
+
 </resources>
